--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
         <br>
         <h1>Our Mission</h1>
         <h2>"<em>Uptown Antiques at Small-Town Prices</em>"</h2>
+        <h2>________________________________________________________________________</h2>
+        <br>
+        <br>
+        <br>
+        <h1><strong>Address: 8959 Dayton Pike, Soddy-Daisy, TN 37379</strong></h1>
     </body>
 </html>
+
 
