--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <br>
         <br>
         <br>
-        <table>
+        <table border="2px">
             <tr>
                 <td>Sunday</td>
                 <td>1 p.m. - 5 p.m.</td>
@@ -54,6 +54,7 @@
         <h1><strong>Address: 8959 Dayton Pike, Soddy-Daisy, TN 37379</strong></h1>
     </body>
 </html>
+
 
 
 
