--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <body>
         <img src="logo.png" alt="Playing Hookey Antiques Logo">
         <h1>Playing Hookey Antiques</h1>
+        <img src="storefront.png">
         <div id="introduction">
         <h3>Social Media</h3>
         <a href="https://www.facebook.com/people/Playing-Hookey-Antiques/61555409485553" target="_blank">Facebook Page</a>
@@ -54,6 +55,7 @@
         <h1><strong>Address: 8959 Dayton Pike, Soddy-Daisy, TN 37379</strong></h1>
     </body>
 </html>
+
 
 
 
