--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head><title>Playing Hookey Antiques</title></head>
+    <head><meta name="description" content="Playing Hookey Antiques, come visit us in TN. Local Tennessee shop. Vintage store. 8959 Dayton Pike, Soddy-Daisy, TN. Soddy-Daisy TN. Fun shops in Tennesse."><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Playing Hookey Antiques</title></head>
     <body>
         <img src="logo.png" alt="Playing Hookey Antiques Logo">
         <h1>Playing Hookey Antiques</h1>
@@ -55,6 +55,7 @@
         <h1><strong>Address: 8959 Dayton Pike, Soddy-Daisy, TN 37379</strong></h1>
     </body>
 </html>
+
 
 
 
