--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
     <head><meta chartset="utf-8"><meta name="description" content="Playing Hookey Antiques, come visit us in TN. Local Tennessee shop. Vintage store. 8959 Dayton Pike, Soddy-Daisy, TN. Soddy-Daisy TN. Fun shops in Tennesse."><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Playing Hookey Antiques</title></head>
     <body>
         <img src="logo.png" alt="Playing Hookey Antiques Logo">
-        <h1 style='color: white; background-image: storefront.png;'>Playing Hookey Antiques</h1>
+        <h1 style="
+    color: white; 
+    background-image: url('storefront.png'); 
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 20;
+"><em>
+    Playing Hookey Antiques
+        </em></h1>
+
         <div id="introduction">
         <h3>Social Media</h3>
         <a href="https://www.facebook.com/people/Playing-Hookey-Antiques/61555409485553" target="_blank">Facebook Page</a>
@@ -54,6 +63,7 @@
         <h1><strong>Address: 8959 Dayton Pike, Soddy-Daisy, TN 37379</strong></h1>
     </body>
 </html>
+
 
 
 
