--- a/index.html
+++ b/index.html
@@ -4,14 +4,8 @@
     <body>
         <img src="logo.png" alt="Playing Hookey Antiques Logo">
         <h1 style="
-    color: white; 
-    background-image: url('storefront.png'); 
-    background-size: cover;
-    background-repeat: no-repeat;
-    padding: 20;
-"><em>
-    Playing Hookey Antiques
-        </em></h1>
+    color: white;background-image: url('storefront.png');background-size: cover;background-repeat: no-repeat;padding: 20"><em>
+    Playing Hookey Antiques</em></h1>
 
         <div id="introduction">
         <h3>Social Media</h3>
@@ -63,6 +57,7 @@
         <h1><strong>Address: 8959 Dayton Pike, Soddy-Daisy, TN 37379</strong></h1>
     </body>
 </html>
+
 
 
 
