--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
     <head><meta chartset="utf-8"><meta name="description" content="Playing Hookey Antiques, come visit us in TN. Local Tennessee shop. Vintage store. 8959 Dayton Pike, Soddy-Daisy, TN. Soddy-Daisy TN. Fun shops in Tennesse."><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Playing Hookey Antiques</title></head>
     <body>
         <img src="logo.png" alt="Playing Hookey Antiques Logo">
-        <h1 style="font-size: 88px; color: white;background-image: url('storefront.png');background-size: cover;background-repeat: no-repeat;padding: 20px"><em> Playing Hookey Antiques</em></h1>
+        <h1 style="
+    font-size: 88px;
+    color: white;
+    background-image: url('storefront.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 40px;
+    text-align: center;
+">
+    <em>Playing Hookey Antiques</em>
+</h1>
 
-        <div id="introduction">
         <h3>Social Media</h3>
         <a href="https://www.facebook.com/people/Playing-Hookey-Antiques/61555409485553" target="_blank">Facebook Page</a>
         <a href="https://www.instagram.com/playinghookeyantiques/?hl=en" target="_blank">Instagram Page</a>
@@ -55,6 +64,7 @@
         <h1><strong>Address: 8959 Dayton Pike, Soddy-Daisy, TN 37379</strong></h1>
     </body>
 </html>
+
 
 
 
