--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
     <head><meta chartset="utf-8"><meta name="description" content="Playing Hookey Antiques, come visit us in TN. Local Tennessee shop. Vintage store. 8959 Dayton Pike, Soddy-Daisy, TN. Soddy-Daisy TN. Fun shops in Tennesse."><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Playing Hookey Antiques</title></head>
     <body>
         <img src="logo.png" alt="Playing Hookey Antiques Logo">
-        <h1 style="
-    font-size: 88px;
+<h1 style="
+    font-size: 48px;
     color: white;
     background-image: url('storefront.png');
-    background-size: cover;
+    background-size: contain; 
+    background-position: center;
     background-repeat: no-repeat;
-    padding: 40px;
+    padding: 60px 20px;
     text-align: center;
+    margin: 0;
+">
+    <em>Playing Hookey Antiques</em>
+</h1>
+
 ">
     <em>Playing Hookey Antiques</em>
 </h1>
@@ -64,6 +70,7 @@
         <h1><strong>Address: 8959 Dayton Pike, Soddy-Daisy, TN 37379</strong></h1>
     </body>
 </html>
+
 
 
 
