--- a/index.html
+++ b/index.html
@@ -1,93 +1,82 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head><meta chartset="utf-8"><meta name="description" content="Playing Hookey Antiques, come visit us in TN. Local Tennessee shop. Vintage store. 8959 Dayton Pike, Soddy-Daisy, TN. Soddy-Daisy TN. Fun shops in Tennesse."><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Playing Hookey Antiques</title></head>
-    <body>
-        <img src="logo.png" alt="Playing Hookey Antiques Logo">
-<h1 style="
-    font-size: 48px;
-    color: white;
-    background-image: url('storefront.png');
-    background-size: contain; 
-    background-position: center;
-    background-repeat: no-repeat;
-    padding: 360px 120px;
-    text-align: center;
-    margin: 0;
-">
-    <em>Playing Hookey Antiques</em>
-</h1>
-        <h3>Social Media</h3>
-        <a href="https://www.facebook.com/people/Playing-Hookey-Antiques/61555409485553" target="_blank">Facebook Page</a>
-        <a href="https://www.instagram.com/playinghookeyantiques/?hl=en" target="_blank">Instagram Page</a>
-        <a href="https://www.tiktok.com/@playing.hookey.an" target="_blank">Tiktok Page</a></div>
-        <br>
-        <br>
-        <br>
-        <h1>Our Mission</h1>
-        <h2>"<em>Uptown Antiques at Small-Town Prices</em>"</h2>
-        <h2>________________________________________________________________________</h2>
-        <br>
-        <br>
-        <br>
-        <table border="2">
-            <tr>
-                <td>Sunday</td>
-                <td>1 p.m. - 5 p.m.</td>
-            </tr>
-            <tr>
-                <td>Monday</td>
-                <td>10 a.m. - 5 p.m.</td>
-            </tr>
-            <tr>
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="Playing Hookey Antiques, come visit us in TN. Local Tennessee shop. Vintage store. 8959 Dayton Pike, Soddy-Daisy, TN. Soddy-Daisy TN. Fun shops in Tennessee.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Playing Hookey Antiques</title>
+</head>
+<body>
+
+    <img src="logo.png" alt="Playing Hookey Antiques Logo">
+
+    <h1 style="
+        font-size: 48px;
+        color: white;
+        background-image: url('storefront.png');
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+        padding: 360px 120px;
+        text-align: center;
+        margin: 0;
+    ">
+        <em>Playing Hookey Antiques</em>
+    </h1>
+
+    <h3>Social Media</h3>
+    <a href="https://www.facebook.com/people/Playing-Hookey-Antiques/61555409485553" target="_blank">Facebook Page</a>
+    <a href="https://www.instagram.com/playinghookeyantiques/?hl=en" target="_blank">Instagram Page</a>
+    <a href="https://www.tiktok.com/@playing.hookey.an" target="_blank">Tiktok Page</a>
+
+    <br><br><br>
+
+    <h1>Our Mission</h1>
+    <h2>"<em>Uptown Antiques at Small-Town Prices</em>"</h2>
+
+    <h2>________________________________________________________________________</h2>
+
+    <br><br><br>
+
+    <table border="2">
+        <tr>
+            <td>Sunday</td>
+            <td>1 p.m. - 5 p.m.</td>
+        </tr>
+        <tr>
+            <td>Monday</td>
+            <td>10 a.m. - 5 p.m.</td>
+        </tr>
+        <tr>
             <td>Tuesday</td>
             <td>CLOSED</td>
-            </tr>
-                <td>Wednesday</td>
-                <td>CLOSED</td>
-            </tr>
-            <tr>
-                <td>Thursday</td>
-                <td>10 a.m. - 5 p.m.</td>
-            </tr>
-            <tr>
-                <td>Friday</td>
-                <td>10 a.m. - 6 p.m.</td>
-            </tr>
-            <tr>
-                <td>Saturday</td>
-                <td>10 a.m. - 6 p.m.</td>
-            </tr>
-        </table>
-        <h2>_________________________________________________________________________</h2>
-        <br>
-        <br>
-        <br>
-        <h1><strong>Address: 8959 Dayton Pike, Soddy-Daisy, TN 37379</strong></h1>
-    </body>
+        </tr>
+        <tr>
+            <td>Wednesday</td>
+            <td>CLOSED</td>
+        </tr>
+        <tr>
+            <td>Thursday</td>
+            <td>10 a.m. - 5 p.m.</td>
+        </tr>
+        <tr>
+            <td>Friday</td>
+            <td>10 a.m. - 6 p.m.</td>
+        </tr>
+        <tr>
+            <td>Saturday</td>
+            <td>10 a.m. - 6 p.m.</td>
+        </tr>
+    </table>
+
+    <h2>_________________________________________________________________________</h2>
+
+    <br><br><br>
+
+    <h1><strong>Address: 8959 Dayton Pike, Soddy-Daisy, TN 37379</strong></h1>
+
+</body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
