--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-    <meta charset="utf-8">
+    <meta chartset="utf-8">
     <meta name="description" content="Playing Hookey Antiques, come visit us in TN. Local Tennessee shop. Vintage store. 8959 Dayton Pike, Soddy-Daisy, TN. Soddy-Daisy TN. Fun shops in Tennessee.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Playing Hookey Antiques</title>
@@ -77,6 +77,7 @@
 
 </body>
 </html>
+
 
 
 
